[project]
name = "email-env-openenv"
version = "0.1.0"
description = "Email Triage AI Environment for Hackathon"
dependencies = [
    "openai",
    "pydantic",
    "openenv-core>=0.2.0",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server.app", "env", "inference", "models", "tasks"]


[tool.hf.metadata]
sdk = "docker"
app_file = "server/app.py"
title = "email-env-openenv"
emoji = "🤖"
colorFrom = "blue"
colorTo = "green"
pinned = false